--- a/index.html
+++ b/index.html
@@ -6,9 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
     <script src="script.js"></script>
+    <header>
+        <h1>Fonticons</h1>
+        <div class="options">
+            <label for="categories">FILTRA PER TIPO:</label>
+                <select name="categories" id="categories">
+                    <option value="all">All</option>
+                    <option value="animal">animal</option>
+                    <option value="vegetable">vegetable</option>
+                    <option value="user">user</option>
+                </select>
+        </div>
+    </header>
 </body>
 </html>
