--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
                     <option value="user">user</option>
                 </select>
         </div>
+        <div class="content">
+            <div class=square>
+                <i class="fas fa-cat blue"></i>
+                <span>CAT</span>
+            </div>
+        </div>
     </header>
 </body>
 </html>
