--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="script.js"></script>
     <header>
         <h1>Fonticons</h1>
         <div class="options">
@@ -25,11 +24,12 @@
                 </select>
         </div>
         <div class="content">
-            <div class=square>
+            <!-- <div class=square>
                 <i class="fas fa-cat blue"></i>
                 <span>CAT</span>
-            </div>
+            </div> -->
         </div>
     </header>
+    <script src="script.js"></script>
 </body>
 </html>
